fix extension bar height and search header spacing

--- a/theme/common.less
+++ b/theme/common.less
@@ -908,7 +908,7 @@ Field editors
 .fullscreen.extensions-browser > {
     .common-modal > {
         .common-modal-header {
-            height: 3rem;
+            height: @mainMenuHeight;
             background-color: @blue;
             z-index: 202;
             display: flex;
@@ -937,6 +937,13 @@ Field editors
         }
     }
 }
+
+@media @tabletAndBelow {
+    .fullscreen.extensions-browser > .common-modal > .common-modal-header {
+        height: @mobileMenuHeight;
+    }
+}
+
 @media @mobileAndBelow {
     .extensions-browser {
         .common-modal > .common-modal-header > .common-modal-back {
@@ -959,9 +966,10 @@ Field editors
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        gap: 1.5rem;
+        gap: 1rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
         background-color: #E5E5E5;
-        padding-top: 1rem;
 
         .search {
             width: 100%;
@@ -1025,9 +1033,7 @@ Field editors
 
     .extension-tags {
         display: flex;
-        padding: 2rem;
-        column-gap: 2rem;
-        row-gap: 1rem;
+        gap: 1rem;
         width: 80%;
         justify-content: center;
         flex-wrap: wrap;
